<resources>
    <string name="app_name">PupFeeder</string>
    <string name="activity_cadastro_agendamento_descricao">Descrição</string>
    <string name="activity_cadastro_agendamento_horario">Horário</string>
    <string name="activity_cadastro_agendamento_frequencia">Frequência</string>
    <string-array name="activity_cadastro_agendamento_frequencia_lista">
        <item>Diariamente</item>
        <item>Hoje</item>
        <item>Fins de semana</item>
        <item>Segunda a sexta</item>
    </string-array>
    <string name="activity_cadastro_agendamento_dispositivo">Dispositivo</string>
    <string-array name="activity_cadastro_agendamento_dispositivo_lista">
        <item>Nenhum</item>
    </string-array>
    <string name="activity_cadastro_agendamento_salvar">Salvar</string>


    <string name="activity_tela_lista_racoes_nova">Nova ração</string>


    <string name="activity_tela_lista_cadastro_racoes_marca">Marca</string>
    <string name="activity_tela_lista_cadastro_racoes_quantidade">Quantidade</string>
    <string name="activity_tela_lista_cadastro_racoes_tipo">Tipo</string>
    <string-array name="activity_tela_lista_cadastro_racoes_tipo_lista">
        <item>Standard</item>
        <item>Premium</item>
        <item>Super Premium</item>
    </string-array>
    <string name="activity_tela_cadastro_racoes_porte">Porte</string>
    <string-array name="activity_tela_cadastro_racoes_porte_lista">
        <item>Filhote</item>
        <item>Porte médio</item>
        <item>Porte Grande</item>
    </string-array>
    <string name="activity_tela_cadastro_racoes_salvar">Salvar</string>

</resources>