<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".Tela_Cadastro_Racoes">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_tela_lista_cadastro_racoes_marca" />

    <EditText
        android:id="@+id/editTextCadastroRacaoMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="Name" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_tela_lista_cadastro_racoes_quantidade" />

    <EditText
        android:id="@+id/editTextCadastroRacaoQuantidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="Name" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_tela_lista_cadastro_racoes_tipo" />

    <Spinner
        android:id="@+id/spinnerCadastroRacaoTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/activity_tela_lista_cadastro_racoes_tipo_lista" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_tela_cadastro_racoes_porte" />

    <Spinner
        android:id="@+id/spinneCadastroRacaoPorte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/activity_tela_cadastro_racoes_porte_lista" />

    <Button
        android:id="@+id/buttonCadastroRacaoSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="salvarRacao"
        android:text="@string/activity_tela_cadastro_racoes_salvar" />
</LinearLayout>